--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
       <ul class="nav nav-tabs">
         <li role="presentation" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a routerLink="">Home</a></li>
         <li role="presentation" routerLinkActive="active"><a routerLink="dependents">Choose Who's Covered</a></li>
-        <li role="presentation" routerLinkActive="active"><a [routerLink]="['users']">Users</a></li>
+        <li role="presentation" routerLinkActive="active"><a [routerLink]="['tobacco']">Tobacco Usage</a></li>
       </ul>
     </div>
   </div>
