--- a/src/app/home/msgs/msgs.component.html
+++ b/src/app/home/msgs/msgs.component.html
@@ -4,5 +4,7 @@
   And we'll ask questions to make sure we have the details right.
   <br /><br />
   TAP ANYWHERE TO CONTINUE
+  <br />
+  <a class="btn btn-success" routerLink="/dependents">Next</a>
   <router-outlet></router-outlet>
 </p>
