adding required fields

--- a/src/app/dependents/add/add.component.html
+++ b/src/app/dependents/add/add.component.html
@@ -7,11 +7,11 @@
     <input type="text" placeholder="Suffix (example: Sr, Jr, III)" [(ngModel)]="suffix" class="form-control"/>
     <input type="text" placeholder="Socail Security Number" [(ngModel)]="ssn" class="form-control"/>
     <button class="btn btn-default" (click)="onAddDependent()">Add dependent</button>-->
-    <input type="text" placeholder="First Name" ngModel name="firstName" class="form-control"/>
+    <input type="text" placeholder="First Name" ngModel name="firstName" class="form-control" required/>
     <input type="text" placeholder="Middle Name" ngModel name="middleName" class="form-control"/>
-    <input type="text" placeholder="Last Name" ngModel name="lastName" class="form-control"/>
+    <input type="text" placeholder="Last Name" ngModel name="lastName" class="form-control" required/>
     <input type="text" placeholder="Suffix (example: Sr, Jr, III)" ngModel name="suffix" class="form-control"/>
-    <input type="text" placeholder="Socail Security Number" ngModel name="ssn" class="form-control"/>
-    <button class="btn btn-default" type="submit">Add dependent</button>
+    <input type="text" placeholder="Socail Security Number" ngModel name="ssn" class="form-control" required/>
+    <button class="btn btn-default" type="submit" [disabled]="!f.valid">Add dependent</button>
   </form>
 </div>
