removing unnecessary function

--- a/src/app/dependents/dependents.component.html
+++ b/src/app/dependents/dependents.component.html
@@ -11,7 +11,7 @@
     <br />
     <button class="btn" (click)="addDependent()">Add Spouse or Dependent</button>
     <br /><br />
-    <button class="btn btn-success" type="submit" [(disabled)]="!allowNavigation">Next</button>
+    <button class="btn btn-success" type="submit">Next</button>
     <router-outlet></router-outlet>
   </form>
 </div>
