--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,14 +1,16 @@
-
-<h4>Hi, Maria</h4>
-<p>
-  Welcome to your Benefits at Premier Co!
+<div>
+  <h4>Hi, Maria</h4>
+  <p>
+    Welcome to your Benefits at Premier Co!
+  </p>
   
   <span>Calendar Icon</span> <br/>Enrollment is Open Until date &amp; time
 
-  <br/>
-
   <!-- <<button class="btn btn-success" (click)="getStarted()">Get Started</button>
   <router-outlet></router-outlet>-->
-  <a class="btn btn-success" routerLink="/msgs">Get Started</a>
+  <div style="margin-top: 10px">
+  <a class="btn btn-success form-control" routerLink="/msgs">Get Started</a>
   <router-outlet></router-outlet>
-</p>
+</div>
+
+</div>
