--- a/src/app/dependents/dependents.component.html
+++ b/src/app/dependents/dependents.component.html
@@ -1,17 +1,20 @@
 <div>
-  Maria, will you be covering anyone other than yourself for health plans (Medical, Dental or Vision)?
-  <br />
-  Plan costs are based on whom you choose to cover.
+  <p style="margin-top: 10px">
+    Maria, will you be covering anyone other than yourself for health plans (Medical, Dental or Vision)?
+    <br />
+    Plan costs are based on whom you choose to cover.
+  </p>
   <br />
   <form (ngSubmit)="onSubmit(f)" #f="ngForm">
-    <div *ngFor="let dependent of dependents; let i = index">
-      <button class="btn" ngClass="{{ dependent.covered ? 'btn-success' : 'btn-default' }}" (click)="toggleDependents([i])" type="button" >{{ dependent.firstName }}&nbsp;{{ dependent.lastName }}</button>
-      <br /><br />
+    <div *ngFor="let dependent of dependents; let i = index" class="form-group">
+      <button class="btn form-control" ngClass="{{ dependent.covered ? 'btn-success' : 'btn-default' }}" (click)="toggleDependents([i])" type="button" >{{ dependent.firstName }}&nbsp;{{ dependent.lastName }}</button>
     </div>
-    <br />
-    <button class="btn" (click)="addDependent()">Add Spouse or Dependent</button>
-    <br /><br />
-    <button class="btn btn-success" type="submit">Next</button>
-    <router-outlet></router-outlet>
+    <div class="form-group">
+      <button class="btn btn-default form-control" (click)="addDependent()">Add Spouse or Dependent</button>
+    </div>
+    <div class="form-group">
+      <button class="btn btn-success form-control" type="submit">Next</button>
+      <router-outlet></router-outlet>
+    </div>
   </form>
 </div>
