--- a/src/app/home/msgs/msgs.component.html
+++ b/src/app/home/msgs/msgs.component.html
@@ -1,10 +1,11 @@
-<p>
-  We'll make suggestions based on what we know about you (age, gender, salary).
-  <br/>
-  And we'll ask questions to make sure we have the details right.
-  <br /><br />
-  TAP ANYWHERE TO CONTINUE
-  <br />
-  <a class="btn btn-success" routerLink="/dependents">Next</a>
-  <router-outlet></router-outlet>
-</p>
+<div>
+  <p style="margin-top: 10px">
+    We'll make suggestions based on what we know about you (age, gender, salary).
+    And we'll ask questions to make sure we have the details right.
+  </p>
+  <div>
+    <a class="btn btn-success form-control" routerLink="/dependents">Next</a>
+    <router-outlet></router-outlet>
+  </div>
+
+</div>
