--- a/src/app/tobacco/tobacco.component.html
+++ b/src/app/tobacco/tobacco.component.html
@@ -1,12 +1,12 @@
 <div>
-  Tell us about the tobacco usage of each covered family member
+  <p style="margin-top: 10px">
+    Tell us about the tobacco usage of each covered family member
+  </p>
   <hr/>
   <form (ngSubmit)="onSubmit(f)" #f="ngForm">
-      <div *ngFor="let dependent of dependents; let i = index" class="row">
-        <div class="col-xs-6 col-sm-5 col-md-4" *ngIf="dependent.covered">
-          Does {{ dependent.firstName }} use tobacco?
-        </div>
-        <div class="col-xs-6 col-sm-5 col-md-4 col-sm-offset-1 col-md-offset-2" *ngIf="dependent.covered">
+      <div *ngFor="let dependent of dependents; let i = index">
+        <div *ngIf="dependent.covered" class="form-group">
+          <label>Does {{ dependent.firstName }} use tobacco?</label>
           <select class="form-control" name="tobaccoUsage-{{ i }}" [(ngModel)]="tobaccoUsage[i]">
             <option *ngFor="let opt of tobaccoUsageOptions" [value]="opt.value">
                           {{ opt.name }}
@@ -16,8 +16,10 @@
           </select>
         </div>
       </div>
-      <button class="btn btn-success" type="submit">Next</button>
-      <router-outlet></router-outlet>
+      <div class="form-group">
+        <button class="btn btn-success form-control" type="submit">Next</button>
+        <router-outlet></router-outlet>
+      </div>
   </form>
   <br />  
 </div>
