--- a/src/app/dependents/add/add.component.html
+++ b/src/app/dependents/add/add.component.html
@@ -25,5 +25,9 @@
     <div class="form-group">
       <button [class]="f.valid ? 'btn btn-success form-control' : 'btn form-control'" type="submit" [disabled]="!f.valid">Add dependent</button>
     </div>
+    <div class="form-group">
+        <!-- <a class="btn btn-success form-control" href="/dependents">Cancel</a> -->
+        <button class="btn btn-success form-control" type="button" (click)="navigateToDependents()">Cancel</button>
+      </div>
   </form>
 </div>
