--- a/src/app/dependents/add/add.component.html
+++ b/src/app/dependents/add/add.component.html
@@ -1,5 +1,5 @@
 <div>
-  <p style="margin-top: 10px">Add your dependent's information</p>
+  <p style="margin-top: 10px">{{ displayData['dependentAdd.msg1'] || 'Default - Add your dependent\'s information' }}</p>
   <form (ngSubmit)="onSubmit(f)" #f="ngForm">
     <!--<input type="text" placeholder="First Name" [(ngModel)]="firstName" class="form-control"/>
     <input type="text" placeholder="Middle Name" [(ngModel)]="middleName" class="form-control"/>
@@ -23,11 +23,11 @@
       <input type="text" placeholder="Socail Security Number" ngModel name="ssn" class="form-control" required/>
     </div>
     <div class="form-group">
-      <button [class]="f.valid ? 'btn btn-success form-control' : 'btn form-control'" type="submit" [disabled]="!f.valid">Add dependent</button>
+      <button [class]="f.valid ? 'btn btn-success form-control' : 'btn form-control'" type="submit" [disabled]="!f.valid">{{ displayData['dependentAdd.addButton'] || 'Add dependent' }}</button>
     </div>
     <div class="form-group">
         <!-- <a class="btn btn-success form-control" href="/dependents">Cancel</a> -->
-        <button class="btn btn-success form-control" type="button" (click)="navigateToDependents()">Cancel</button>
+        <button class="btn btn-success form-control" type="button" (click)="navigateToDependents()">{{ displayData['dependentAdd.cancelButton'] || 'Default - Cancel' }}</button>
       </div>
   </form>
 </div>
