changing to use local json file

--- a/src/app/dependents/add/add.component.html
+++ b/src/app/dependents/add/add.component.html
@@ -23,7 +23,7 @@
       <input type="text" placeholder="Socail Security Number" ngModel name="ssn" class="form-control" required/>
     </div>
     <div class="form-group">
-      <button [class]="f.valid ? 'btn btn-success form-control' : 'btn form-control'" type="submit" [disabled]="!f.valid">{{ displayData['dependentAdd.addButton'] || 'Add dependent' }}</button>
+      <button [class]="f.valid ? 'btn btn-success form-control' : 'btn form-control'" type="submit" [disabled]="!f.valid">{{ displayData['dependentAdd.addButton'] || 'Default - Add dependent' }}</button>
     </div>
     <div class="form-group">
         <!-- <a class="btn btn-success form-control" href="/dependents">Cancel</a> -->
